# tgbot-collect_data

./: CMakeLists.txt  Doxyfile  Source1.cpp  image_storage.cpp  image_storage.h  leaderboard.cpp  leaderboard.h  tgbot.cpp
message_text/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
